# Raygun

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  raygun.sln  raygun.vcxproj
cmake/: add_shader.cmake  compile_flags.cmake  copy_dlls.cmake  source_groups.cmake
docs/: build_instructions_linux.md  build_instructions_windows.md  shared_library.md
example/: CMakeLists.txt  ball.cpp  ball.hpp  example.vcxproj  example_scene.cpp  example_scene.hpp  main.cpp  stdafx.cpp
raygun/: GLSLValidateTargets.props  GLSLValidateVS.props  RaygunAdditionalLibraries.props  RaygunDefaults.props  assert.hpp  camera.cpp  camera.hpp  config.cpp  config.def  config.hpp  entity.cpp  entity.hpp  info.hpp  logging.cpp  logging.hpp  material.cpp  material.hpp  pch.hpp  profiler.cpp  profiler.def  profiler.hpp  raygun.cpp  raygun.hpp  resource_manager.cpp  resource_manager.hpp  scene.cpp  scene.hpp  stdafx.cpp  stdafx.hpp  transform.hpp  vulkan_context.cpp  vulkan_context.hpp  window.cpp  window.hpp
raygun/animation/: animation.cpp  animation.hpp  animation_system.cpp  animation_system.hpp  animator.cpp  animator.hpp  minanim_adapter.hpp
raygun/audio/: audio_source.cpp  audio_source.hpp  audio_system.cpp  audio_system.hpp  sound.cpp  sound.hpp
raygun/compute/: compute_system.cpp  compute_system.hpp
raygun/gpu/: descriptor_set.cpp  descriptor_set.hpp  gpu_buffer.cpp  gpu_buffer.hpp  gpu_material.cpp  gpu_material.hpp  gpu_queue.cpp  gpu_queue.hpp  gpu_utils.cpp  gpu_utils.hpp  image.cpp  image.hpp  shader.cpp  shader.hpp  uniform_buffer.cpp  uniform_buffer.hpp
raygun/input/: input_system.cpp  input_system.hpp
raygun/physics/: physics_error_callback.hpp  physics_sim_callback.cpp  physics_sim_callback.hpp  physics_system.cpp  physics_system.hpp  physics_utils.hpp
raygun/render/: acceleration_structure.cpp  acceleration_structure.hpp  fade.cpp  fade.hpp  imgui_renderer.cpp  imgui_renderer.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  raytracer.cpp  raytracer.hpp  render_system.cpp  render_system.hpp  swapchain.cpp  swapchain.hpp  vertex.hpp
raygun/ui/: text.cpp  text.hpp  ui.cpp  ui.hpp
raygun/utils/: array_utils.hpp  assimp_utils.hpp  fmt_utils.hpp  glfw_utils.hpp  io_utils.hpp  json_utils.hpp  macros.hpp  memory_utils.hpp  minanim.hpp  timer.hpp  vulkan_type_utils.hpp  vulkan_types.def
tools/: instant_collada_export.py
(+48 files in other folders)
